# Hamming_Distance

./: .buildinfo  README.md  codes.ipynb  genindex.html  hamminginstanceclass.ipynb  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
Archivo_PDF/: Contexto.bcf  Contexto.blg  Contexto.run.xml  Contexto.tex  paquetes.tex  referencias.bib  referencias.blg  tablaparacotas.tex
_modules/: index.html
_modules/hammindist/: solvers.html
docs/: conf.py  index.rst
hamming_problem/.ipynb_checkpoints/: Hamming-checkpoint.ipynb  hamming-checkpoint.ipynb
source/: borrarantesdeentregar.txt
src/hammindist/: __init__.py  hamming_problem.py
tests/: test_solvers.py
