[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hammindist"
version = "0.1.0"
description = "Hamming distance."
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme"]
